--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,4 @@ file(GLOB_RECURSE RUSQL_HEADERS src/*.hpp)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/modules")
 
-find_package(MysqlCppConn)
-find_package(Boost COMPONENTS system REQUIRED)
-
-set(RUSQL_INCLUDE_DIRS ${MYSQLCPPCONN_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
-set(RUSQL_LIBRARIES ${MYSQLCPPCONN_LIBRARIES} ${Boost_SYSTEM_LIBRARY})
+# TODO install lines
