Finishes first prototype of rusqlv2!
We must have library, sorry. It does make it easier to link against it (MySql and Boost are linked automatically).

Most of your actions can be performed directly on the database, no need to create a statement or that kind of stuff.
Example:
	database->query("select * from table where id=?", id).get_uint64("column_name");
Bam you just got the first row's column_name as a uint64_t or a rusql::NoResults exception. Congrats.

I have plenty of examples ready to show, they will come!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,17 @@ project(rusql)
 include_directories("${PROJECT_BINARY_DIR}")
 
 file(GLOB_RECURSE RUSQL_HEADERS src/*.hpp)
+file(GLOB_RECURSE RUSQL_SOURCES src/*.cpp)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/modules")
+
+find_package(MysqlCppConn REQUIRED)
+include_directories(${MysqlCppConn_INCLUDE_DIRS})
+find_package(Boost REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
+
+add_library(rusql ${RUSQL_SOURCES})
+target_link_libraries(rusql ${MysqlCppConn_LIBRARIES} ${Boost_LIBRARIES})
 
 install(FILES ${RUSQL_HEADERS} DESTINATION include/rusql)
 install(FILES
@@ -15,6 +24,7 @@ install(FILES
 
 	DESTINATION share/cmake-2.8/Modules
 )
+
 
 add_subdirectory(tests)
 enable_testing()
