Add 5 tests for rusql2. To run them, compile them and run them with options (host,user,pass,db) of an actually running MySQL server. Make sure the user has access to the (existing) db and it is empty. Once rusql gets embedded database support, you can also run them without parameters and they will test against the embedded database.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(rusql)
 
 include_directories("${PROJECT_BINARY_DIR}")
 
+add_definitions("-std=c++0x -O0 -Wall -Wno-long-long")
+
 file(GLOB_RECURSE RUSQL_HEADERS src/*.hpp)
 file(GLOB_RECURSE RUSQL_SOURCES src/*.cpp)
 
@@ -27,7 +29,3 @@ install(FILES
 
 
 add_subdirectory(tests)
-enable_testing()
-add_test(compile tests/compile)
-add_test(connect ${CMAKE_SOURCE_DIR}/tests/runtest.pl connect)
-add_test(connectfail ${CMAKE_SOURCE_DIR}/tests/runtest.pl connectfail)
