Add multiconnection test: multiple SELECT queries can be open simultaneously.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,7 +3,7 @@ include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../src")
 add_custom_target(check COMMAND "${CMAKE_CURRENT_SOURCE_DIR}/tests.pl"
 COMMENT "\nTo run the tests against a live database, call:\n${CMAKE_CURRENT_SOURCE_DIR}/tests.pl <host> <user> <pass> <emptydb>")
 
-foreach(TEST compile connect optional placeholders query)
+foreach(TEST compile connect optional placeholders query multiconnection)
 	add_executable(test_${TEST} EXCLUDE_FROM_ALL ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}.cpp)
 	target_link_libraries(test_${TEST} rusql)
 	add_test(test_${TEST} test_${TEST})
