Add headers to add_library call so they show up in QtCreator

--- a/rusql/CMakeLists.txt
+++ b/rusql/CMakeLists.txt
@@ -3,8 +3,11 @@ cmake_minimum_required(VERSION 2.8)
 add_subdirectory(mysql)
 
 file(GLOB sources *.cpp)
+file(GLOB headers *.hpp)
 
-add_library(rusql ${sources})
+source_group("rusql headers" FILES ${headers})
+
+add_library(rusql ${sources} ${headers})
 target_link_libraries(rusql rusql_mysql)
 
 if(MYSQLd_FOUND)
